--- a/index.html
+++ b/index.html
@@ -1,76 +1,85 @@
 <!DOCTYPE html>
-<html>
-  <head>
+<html lang="en">
+<head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Landing Page</title>
-  </head>
-  <body>
+</head>
+<body>
     <header>
-      <h1>Header Logo</h1>
-      <ul>
-        <li><a href="">header link one</a>
-        <li><a href="">header link two</a>
-        <li><a href="">header link three</a>
-      </ul>
+        <h1>Header Logo</h1>
+        <ul>
+            <li><a href="">header link one</a>
+            <li><a href="">header link two</a>
+            <li><a href="">header link three</a>
+        </ul>
     </header>
     <main>
 
-      <section id="section-one">
-        <article>
-          <div class="secOne-content">
-            <h2>This website is awesome</h2>
-            <p>This website has some subtext that goes here under the main title. It's a samller font and the color is lower contrast</p>
-            <button class="signup-button">Sign up</button>
-          </div>
-          <div class="secOne-imagePlaceholder>this is a placeholder for an image</div>
-        </article>
-      </section>
+        <section id="section-one">
+            <article>
+                <div class="secOne-content">
+                    <h2>This website is awesome</h2>
+                    <p>This website has some subtext that goes here under the main title. It's a samller font and the
+                        color is lower contrast</p>
+                    <button class="signup-button">Sign up</button>
+                </div>
+                <div class="secOne-imagePlaceholder">this is a placeholder for an image</div>
+            </article>
+        </section>
 
-      <section id="section-two">
-        <article>
-          <div class="secTwo-content">
-            <h2>Some random information.</h2>
-            <div class="secTwo-boxed-box>
-              <div class="secTwo-boxes"></div>
-              <p>this is some subtext under an illustration or image</p>
-            </div>
-            <div class="secTwo-boxed-box>
-              <div class="secTwo-boxes"></div>
-              <p>this is some subtext under an illustration or image</p>
-            </div>
-            <div class="secTwo-boxed-box>
-              <div class="secTwo-boxes"></div>
-              <p>this is some subtext under an illustration or image</p>
-            </div>
-            <div class="secTwo-boxed-box>
-              <div class="secTwo-boxes"></div>
-              <p>this is some subtext under an illustration or image</p>
-            </div>
-          </div>
-        </article>
-      </section>
+        <section id="section-two">
+            <article>
+                <div class="secTwo-content">
+                    <h2>Some random information.</h2>
 
-      <section id="section-three">
-        <div class="secThree-content">
-          <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All i know is that it looks nice.</p>
-          <p>-Thor, God of Thunder</p>
-        </div>
-      </section>
+                    <div class="boxes">
+                        <div class="secTwo-boxed-box">
+                            <div class="secTwo-boxes"></div>
+                            <p>this is some subtext under an illustration or image</p>
+                        </div>
+                        <div class="secTwo-boxed-box">
+                            <div class="secTwo-boxes"></div>
+                            <p>this is some subtext under an illustration or image</p>
+                        </div>
+                        <div class="secTwo-boxed-box">
+                            <div class="secTwo-boxes"></div>
+                            <p>this is some subtext under an illustration or image</p>
+                        </div>
+                        <div class="secTwo-boxed-box">
+                            <div class="secTwo-boxes"></div>
+                            <p>this is some subtext under an illustration or image</p>
+                        </div>
+                    </div>
+                    
+                </div>
+            </article>
+        </section>
 
-      <section id="section-four">
-        <div class="big-button-non-clickable">
-          <div class="bb-non-clickable-content">
-            <h2>Call to action! It's time!</h2>
-            <p>Sign up for our product by clicking that button right over there!</p>
-          </div>
-          <div class="fourth-section-button-container">
-            <button class="signup-button">Sign up</button>
-          </div>
-        </div>
-      </section>
+        <section id="section-three">
+            <div class="secThree-content">
+                <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or
+                    maybe people will actually read it. Who knows? All i know is that it looks nice.</p>
+                <p>-Thor, God of Thunder</p>
+            </div>
+        </section>
+
+        <section id="section-four">
+            <div class="big-button-non-clickable">
+                <div class="bb-non-clickable-content">
+                    <h2>Call to action! It's time!</h2>
+                    <p>Sign up for our product by clicking that button right over there!</p>
+                </div>
+                <div class="fourth-section-button-container">
+                    <button class="signup-button">Sign up</button>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
-      <p>Copyright © The Odin Project 2021</p>
+        <p>Copyright © The Odin Project 2021</p>
     </footer>
-  </body>
+</body>
 </html>
