--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
 
         <section id="section-three">
             <div class="secThree-content">
-                <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or
+                <p id="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or
                     maybe people will actually read it. Who knows? All i know is that it looks nice.</p>
-                <p>-Thor, God of Thunder</p>
+                <p id="quote-author">-Thor, God of Thunder</p>
             </div>
         </section>
 
@@ -73,7 +73,7 @@
                     <p>Sign up for our product by clicking that button right over there!</p>
                 </div>
                 <div class="fourth-section-button-container">
-                    <button class="signup-button">Sign up</button>
+                    <button class="signup-button" id="last-button">Sign up</button>
                 </div>
             </div>
         </section>
