--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <article>
                 <div class="secOne-content">
                     <h2>This website is awesome</h2>
-                    <p>This website has some subtext that goes here under the main title. It's a samller font and the
+                    <p>This website has some subtext that goes here under the main title. It's a smaller font and the
                         color is lower contrast</p>
                     <button class="signup-button">Sign up</button>
                 </div>
